--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -304,6 +304,13 @@ Cost:
 
 \begin_layout Subsection
 License : AGPL 
+\begin_inset CommandInset label
+LatexCommand label
+name "sub:License-:-AGPL"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -530,8 +537,10 @@ key "ASSEM_MEROUANE"
 \end_inset
 
 .
- The code base contained an Application Programming Interface that performs
- the basic search operation.
+ The code base was licensed under the GPL open license as a result of using
+ the library whoosh licensed under the same license.
+ It contained an Application Programming Interface that performs the basic
+ search operation.
  It offers the results in a raw HTML format, could be used only in Python.
  To be used in another programming language, it requires to write a complicated
  wrapper.
@@ -566,86 +575,371 @@ A basic CGI-Html interface, demonstrates in a simpler way the API features.
 
 \end_deeper
 \begin_layout Standard
--- Changes from THE PFE PDF
-\end_layout
-
-\begin_layout Standard
-----
+The API contained many implemented search features including:
 \end_layout
 
 \begin_layout Enumerate
-implemented features:
+
+\series bold
+Search by exact word:
+\series default
+ that is the simple search, eg: 
+\lang arabic_arabi
+فأسقيناكموه
+\lang english
+.
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+Search by phrase:
+\series default
+ for searching a whole phrase rather then independent words, eg: 
+\lang arabic_arabi
+"رسول الله"
+\lang english
+.
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+Logical relations:
 \end_layout
 
 \begin_deeper
 \begin_layout Enumerate
-Exact Word: that is the simple search, eg: فأسقيناكموه
+
+\series bold
+Conjuction:
+\series default
+ for searching only the ayahs that contains two terms or more, eg: 
+\lang arabic_arabi
+الصلاة + الزكاة
+\lang english
+.
+ 
 \end_layout
 
 \begin_layout Enumerate
-Phrase: for searching a whole phrase rather then independent words, eg:"رسول
- الله"
+
+\series bold
+Disjunction (default):
+\series default
+ for searching all the ayahs that contains one of two terms or more, eg:
+ 
+\lang arabic_arabi
+الصلاة | الزكاة
+\lang english
+.
+ 
 \end_layout
 
 \begin_layout Enumerate
-Logical relations Conjuction: for searching only the ayahs that contains
- two terms or more, eg: الصلاة + الزكاة.
- Disjunction (default): for searching all the ayahs that contains one of
- two terms or more, eg:الصلاة | الزكاة.
- Exception: for eleminating a term from search results, eg:الصلاة - الزكاة.
- You can understand it as "Ayahs that contains الصلاة but doesn't contain
- الزكاة".
+
+\series bold
+Exception:
+\series default
+ for eliminating a term from search results, eg:
+\lang arabic_arabi
+الصلاة - الزكاة
+\lang english
+.
+ You can understand it as "Ayahs that contains 
+\lang arabic_arabi
+الصلاة
+\lang english
+ but doesn't contain 
+\lang arabic_arabi
+الزكاة
+\lang english
+".
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+
+\series bold
+Wildcards (Jokers)
+\series default
+: for search all words that share many letters, we have: 
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+
+\series bold
+Asterisk:
+\series default
+ replace zero or many undefined letters, eg: 
+\lang arabic_arabi
+*نبي*
+\lang english
+.
 \end_layout
 
 \begin_layout Enumerate
-Wildcards or Jokers: for search all words that share many letters, we have:
- Asterisk: replace zero or many undefined letters, eg: *نبي* Interogation
- mark: replace one undefined letter, eg: نعم؟
+
+\series bold
+Interogation mark: 
+\series default
+replace one undefined letter, eg: 
+\lang arabic_arabi
+نعم؟
+\lang english
+.
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+
+\series bold
+Fielded search:
+\series default
+ to search in more information of Quran , not only ayahs' text, we cite
+ here the most significant fields for users: 
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+
+\series bold
+aya_id or 
+\lang arabic_arabi
+رقم_الآية
+\lang english
+ (Aya local ID):
+\series default
+ that's the number of ayah inside its sura, use it for example to search
+ all first ayahs (aya_id:1).
+ 
 \end_layout
 
 \begin_layout Enumerate
-Fielded search: to search in more information of Quran , not only ayahs'text,
- we cite here the most significant fields for users: aya_id or رقم_الآية
- (Aya local ID): that's the number of ayah inside its sura, use it for example
- to search all first ayahs (رقم_الآية:1).
- sura_id or رقم_السورة (Sura ID): use it with aya_id to specify an exact
- ayah,for example the first ayah of surate an-nass will be : aya_id:1 +
- sura_id:114.
- subject or موضوع (Topics): thats field contains all topics information,
- it will be helpful to search for a topic,eg: موضوع:الشيطان
+
+\series bold
+sura_id or 
+\lang arabic_arabi
+رقم_السورة
+\lang english
+ (Sura ID): 
+\series default
+use it with aya_id to specify an exact ayah,for example the first ayah of
+ surate an-nass will be: 
+\emph on
+aya_id:1 + sura_id:114
+\emph default
+.
+ 
 \end_layout
 
 \begin_layout Enumerate
-for more fields, see: Fields
+
+\series bold
+subject or 
+\lang arabic_arabi
+موضوع
+\lang english
+ (Topics):
+\series default
+ thats field contains all topics information, it will be helpful to search
+ for a topic, eg: 
+\emph on
+subject:
+\lang arabic_arabi
+الشيطان
+\lang english
+.
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+
+\series bold
+Intervals:
+\series default
+ this will be helpful in statistics or positions, for example search the
+ divine name only in the first surahs: 
+\emph on
+aya_id:[1 to 5]
 \end_layout
 
 \begin_layout Enumerate
-Intervals: this will be helpful in statistics or positions, for example
- search the divine name only in the first surahs: رقم_السورة :[1 الى 5 ]
- + الله
+
+\series bold
+Partial vocalization:
+\series default
+ to consider given diacritics and ignore the others, eg:
+\emph on
+ aya_:
+\lang arabic_arabi
+'مَن'
+\emph default
+\lang english
+.
 \end_layout
 
 \begin_layout Enumerate
-Partial vocalization: to consider given diacritics and ignore the others,
- eg: آية_ :'مَن'.
+
+\series bold
+Word Properties:
+\series default
+ to search using root and type of words, type could be
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+\lang arabic_arabi
+اسم
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+\lang english
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+(noun), 
+\lang arabic_arabi
+فعل
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+\lang english
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+(verb) or 
+\lang arabic_arabi
+أداة
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+\lang english
+ 
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+(particle), eg: {
+\lang arabic_arabi
+قول
+\lang english
+ ،
+\lang arabic_arabi
+اسم
+\lang english
+}.
 \end_layout
 
 \begin_layout Enumerate
-Word Properties: to search using root and type of words, type could be اسم,
- فعل or أداة,eg: {قول،اسم}.
+
+\series bold
+Derivations 
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+
+\series bold
+light (using lemma)
+\series default
+: to search all the words having the same lemma of the given word,eg: >
+\lang arabic_arabi
+ملك
+\lang english
+.
+ 
 \end_layout
 
 \begin_layout Enumerate
-Derivations light (using lemma): to search all the words having the same
- lemma of the given word,eg: >ملك.
- heavy (using root): to search all the words having the same root of the
- given word,eg: >>ملك.
+
+\series bold
+heavy (using root)
+\series default
+: to search all the words having the same root of the given word,eg: >>
+\lang arabic_arabi
+ملك
+\lang english
+.
  
 \end_layout
 
 \end_deeper
+\begin_layout Standard
+Finally, the code passed by many unlogged rewriting phase ...
+\end_layout
+
 \begin_layout Section
-Quranic & Arabic Resources 
+Quranic and Arabic Resources 
 \begin_inset CommandInset label
 LatexCommand label
 name "sec:Qur'anic-and-Linguistic"
@@ -653,6 +947,23 @@ name "sec:Qur'anic-and-Linguistic"
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+Our work requires a set of resources to make the implementation effective.
+ among those resources [copy from PFE] ...
+\end_layout
+
+\begin_layout Standard
+Quranic 
+\end_layout
+
+\begin_layout Standard
+and Arabic
+\end_layout
+
+\begin_layout Standard
+---
 \end_layout
 
 \begin_layout Standard
@@ -677,23 +988,9 @@ a User A search about Q but in results he find some missed informations,
 Figure: the Case VIDE
 \end_layout
 
-\begin_layout Enumerate
-Introducing WORD index 
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
-Figure: Visio Figure of word index
-\end_layout
-
-\end_deeper
-\begin_layout Standard
-Les indexes
-\end_layout
-
 \begin_layout Standard
 \begin_inset Note Comment
-status open
+status collapsed
 
 \begin_layout Plain Layout
 For every ressource , a short definition + using details + loading(mise
@@ -710,8 +1007,8 @@ For every ressource , a short definition + using details + loading(mise
 status open
 
 \begin_layout Plain Layout
-In loading indexes, use dynamic fields it helps much to load ressources
- one by one
+In loading indexes, use dynamic fields it helps much to load resources one
+ by one
 \end_layout
 
 \end_inset
@@ -719,18 +1016,11 @@ In loading indexes, use dynamic fields it helps much to load ressources
 
 \end_layout
 
-\begin_layout Subsection
-Used resources
-\end_layout
-
 \begin_layout Standard
-
-\lang french
-Cette proposition de recherche est liée à certains projets, ces projets
- sont les suivants: 
+The following list is a list of the used resources:
 \end_layout
 
-\begin_layout Itemize
+\begin_layout Enumerate
 
 \series bold
 \lang french
@@ -749,7 +1039,7 @@ Kais Dukes
  par les informations qu'il contient.
 \end_layout
 
-\begin_layout Itemize
+\begin_layout Enumerate
 
 \series bold
 \lang french
@@ -767,7 +1057,7 @@ Noorhan Abbas
  
 \end_layout
 
-\begin_layout Itemize
+\begin_layout Enumerate
 
 \series bold
 \lang french
@@ -779,41 +1069,32 @@ utilise la représentation des connaissances pour définir les concepts clés
  Nous pourrions utilisé ce système pour la suggestion de mots-clés relatifs.
 \end_layout
 
-\begin_layout Subsubsection
-Tanzil
-\end_layout
+\begin_layout Enumerate
 
-\begin_layout Standard
-
+\series bold
+Tanzil Mushaf version,
+\series default
 \lang french
-Notre travail a besoin d'une version électronique de Coran pour l'indexer
+ Notre travail a besoin d'une version électronique de Coran pour l'indexer
  .
  Nous trouvons que le projet Tanzil est le plus authentique, il est passé
  par plusieurs phases de vérification et vérifié manuellement par une équipe
  spécialisée.
 \end_layout
 
-\begin_layout Subsubsection
+\begin_layout Enumerate
 Qurany
 \end_layout
 
-\begin_layout Subsubsection
-Arabic Quanic Corpus
-\end_layout
-
-\begin_layout Subsubsection
+\begin_layout Enumerate
 Zekr Translation Models
 \end_layout
 
-\begin_layout Subsubsection
+\begin_layout Enumerate
 VerseByVerse Recitations
 \end_layout
 
-\begin_layout Subsection
-Resources to use
-\end_layout
-
-\begin_layout Standard
+\begin_layout Enumerate
 Qutrub
 \end_layout
 
@@ -2005,12 +2286,18 @@ FEATURExRESSOURCE
 Our improvements
 \end_layout
 
-\begin_layout Enumerate
-Rewriting a huge part of the code [undocumented changes! to add or to remove!!]
-\end_layout
+\begin_layout Standard
+As a first step, we change the license into the GNU Affero General Public
+ License which aims to protect libraries that usually used in servers (for
+ more details, see 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sub:License-:-AGPL"
 
-\begin_layout Enumerate
-Opening the source,Starting with GPL then AGPL because??
+\end_inset
+
+).
+ 
 \end_layout
 
 \begin_layout Enumerate
